--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "vite_react_shadcn_ts",
-  "homepage": "https://bashairfan0911.github.io/Modern_portfolio",
-  "private": true,
+  "homepage": "https://bashairfan0911.github.io/Modern_portfolio/",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
